--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
 <div class="main-content"> 
   {{>header}}
+  <p>This site was created by Riya Agarwal.It uses data with the hep of APIS</p>
 
 </div>
     
